drkns 28.11.2018 19:20:40 +0000 - build 5331

1. VT-рендерер не учитывал, что плагины вместо нормального цвета вполне могут предоставлять шопопало.

2. Флаг ENABLE_VIRTUAL_TERMINAL_INPUT сбрасывается, если установлен.

3. В Windows 10 опция "ClearType-friendly redraw" ничего не делает.

drkns 28.11.2018 01:12:50 +0000 - build 5330

1. Показываем LastError & NTSTATUS в обработчике исключений, если возможно.

svs 27.11.2018 16:57:10 +0300 - build 5329

1. SQLite 3.25.3

drkns 26.11.2018 23:46:06 +0000 - build 5328

1. 0001726: Entering symbols using Input Method Editor doesn't work.

drkns 25.11.2018 22:07:47 +0000 - build 5327

1. Уточнения обработки исключений.

2. Рефакторинг.

w17 23.11.2018 16:13:05 +0300 - build 5326

1. Добавлена опция 'Сохранять режим просмотра' (умолчание = true)

2. Добавлена опция 'Автовыбор дамп режима просмотра' (умолчание = true)
   если отключить, новые файлы всегда будут открываться в текстовом режиме

3. Изменено поведение клавиши F2 в просмотре для режимов:
   Дамп - производится переключение в Текст,
   Код (Hex) - производится переключение в Дамп или Текст (F4 и F2 выбирают разные режимы)

drkns 21.11.2018 09:17:30 +0000 - build 5325

1. Опечатка в 5324.

drkns 20.11.2018 19:20:12 +0000 - build 5324

1. Частичный откат 5276: вернем чтение групп раскраски/сортировки в старом формате.
   При отсутствии новых параметров и наличии старых старые будут прочитаны, удалены и, не отходя от кассы, сохранены, как новые.

   Следующая попытка окончательного удаления легаси-кода - через год.

drkns 20.11.2018 01:10:03 +0000 - build 5323

1. Новые версии tinyxml2 и fmt.

2. Рефакторинг.

drkns 18.11.2018 23:20:04 +0000 - build 5322

1. Не работала команда /clearcache.

drkns 18.11.2018 14:59:47 +0000 - build 5321

1. Рефакторинг.

drkns 18.11.2018 11:07:28 +0000 - build 5320

1. И ещё раз про FastFind.

drkns 17.11.2018 22:05:54 +0000 - build 5319

1. Продолжение 0003679: всегда сбрасываем фильтр при закрытии комбобокса.
