@@ -1,5 +1,5 @@
-﻿#ifndef FAREXCPT_HPP_F7B85E85_71DD_483D_BD7F_B26B8566AC8E
-#define FAREXCPT_HPP_F7B85E85_71DD_483D_BD7F_B26B8566AC8E
+﻿#ifndef EXCEPTION_HANDLER_HPP_F7B85E85_71DD_483D_BD7F_B26B8566AC8E
+#define EXCEPTION_HANDLER_HPP_F7B85E85_71DD_483D_BD7F_B26B8566AC8E
 #pragma once
 
 /*
@@ -120,4 +120,4 @@ auto seh_invoke_thread(std::exception_ptr& ExceptionPtr, function&& Callable)
 	});
 }
 
-#endif // FAREXCPT_HPP_F7B85E85_71DD_483D_BD7F_B26B8566AC8E
+#endif // EXCEPTION_HANDLER_HPP_F7B85E85_71DD_483D_BD7F_B26B8566AC8E
