@@ -1,3 +1,7 @@
+drkns 29.11.2018 18:07:01 +0000 - build 5332
+
+1. Вернём "ClearType-friendly redraw" для Windows 10 - это всё ещё актуально для Legacy Console.
+
 drkns 28.11.2018 19:20:40 +0000 - build 5331
 
 1. VT-рендерер не учитывал, что плагины вместо нормального цвета вполне могут предоставлять шопопало.
